--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "next": "14.2.15",
-    "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.13",
     "tsparticles": "^3.5.0",
-    "tsparticles-slim": "^2.12.0"
+    "tsparticles-slim": "^2.12.0",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@tsparticles/configs": "^3.5.0",
@@ -36,7 +36,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "prettier": "^3.3.3"
   }
 }
